--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <img src="images/logo.png" alt="NXT Life Logo" class="logo-img">
-                <h2>NXT Life Fitness Center & Gym</h2>
+                <h2>NXT Life Fitness </h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
